--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,7 +17,7 @@ services:
     restart: always
 
   rsvp:
-     build: rsvp/
+     build: rsvp
      image: rsvp
      #mem_limit: 2g
      restart: always
@@ -331,12 +331,6 @@ services:
       kafka: 
         condition: service_healthy
       mongodb: 
-        condition: service_healthy
-      moviescreening-service: 
-        condition: service_healthy
-      schedular-service: 
-        condition: service_healthy
-      payment: 
         condition: service_healthy
     healthcheck: 
       test: "exit 0"
